package src;

public interface Appareils {
     void allumer() ;
     void eteindre();
     String toString();
     boolean isAllumer();

}
