@startuml
'https://plantuml.com/sequence-diagram


class Telecommande{


   + allumerAppareils(Int)
   + eteindre(Int)
   + activerTout()
   + toString() : String
   + ajouterAppareils(Appareils)
}
class (Lampe){
- nom : String
- allumer : boolean
+ toString() : String
+ allumer()
+ eteindre()
+ isAllumer() : boolean
}
class Hifi{
- son : int
- allumer : boolean
+ isAllumer() : boolean
+ allumer()
+ toString() : String
+ eteindre()
}

class Television{
-allumer : boolean
+allumer()
+eteindre()
+ isAllumer() : boolean
}

interface Appareils{

+ toString() : String
+ isAllumer() : boolean
+ allumer()
+eteindre()
}

Hifi ..|> Appareils
Lampe ..|> Appareils
Television ..|> Appareils
Telecommande "*" --> "*"  Appareils : - appareils
@enduml